@@ -12,6 +12,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.util.*;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 @Slf4j
 public class GameRoom extends JobSerializer {
@@ -96,6 +97,7 @@ public class GameRoom extends JobSerializer {
         // update packet 보내기
         SUpdate updatePacket = new SUpdate();
         UpdateInfo update = new UpdateInfo();
+        update.leaderboard = new ArrayList<>();
         update.t = System.currentTimeMillis();
 
         // meteor, bullet(projectile), shield update
@@ -106,7 +108,8 @@ public class GameRoom extends JobSerializer {
 
         for (Meteor meteor : meteors.values()) {
             meteor.update();
-            update.meteors.add(new UpdateInfo.MeteorInfo(meteor.getId(), meteor.pos().x, meteor.pos().y, meteor.isInvisible()));
+            update.meteors.add(
+                    new UpdateInfo.MeteorInfo(meteor.getId(), meteor.pos().x, meteor.pos().y, meteor.isInvisible()));
         }
 
         flush();
@@ -117,9 +120,7 @@ public class GameRoom extends JobSerializer {
                     new UpdateInfo.UpdatePos(
                             player.getInfo().getName(),
                             player.getDirection(), player.hp(), player.getId(), player.pos().x, player.pos().y,
-                            player.getShields().size()
-                    )
-            );
+                            player.getShields().size()));
         }
 
         updatePacket.update = update;
@@ -152,7 +153,8 @@ public class GameRoom extends JobSerializer {
             session.send(enterPacket);
         } else if (gameObjectType == GameObjectType.Bullet) {
             Bullet bullet = (Bullet) gameObject;
-            // log.info("bullet({}) enter game target: {}", bullet.getId(), bullet.getTarget().getId());
+            // log.info("bullet({}) enter game target: {}", bullet.getId(),
+            // bullet.getTarget().getId());
             // log.info("bullet info: {}", bullet.getInfo());
             bullets.put(bullet.getId(), bullet);
             bullet.setGameRoom(this);
@@ -165,16 +167,18 @@ public class GameRoom extends JobSerializer {
 
         // 주변 플레이어들에게 내 스폰 정보를 넘김 (당연히 나 제외)
         /*
-        SSpawn resSpawnPacket = new SSpawn();
-        resSpawnPacket.add(gameObject.getInfo());
-        for (Player p : players.values()) {
-            if (p.getPlayerId() != gameObject.getId())
-                p.getSession().send(resSpawnPacket);
-        }*/
+         * SSpawn resSpawnPacket = new SSpawn();
+         * resSpawnPacket.add(gameObject.getInfo());
+         * for (Player p : players.values()) {
+         * if (p.getPlayerId() != gameObject.getId())
+         * p.getSession().send(resSpawnPacket);
+         * }
+         */
     }
 
     public void leaveGame(int objectId) {
-        // log.info("leave game ()-({})", ObjectManager.getObjectTypeById(objectId), objectId);
+        // log.info("leave game ()-({})", ObjectManager.getObjectTypeById(objectId),
+        // objectId);
 
         GameObjectType type = ObjectManager.getObjectTypeById(objectId);
         if (type == GameObjectType.Player) {
@@ -314,7 +318,7 @@ public class GameRoom extends JobSerializer {
     public List<Player> findPlayer(Predicate<Player> condition) {
         return players.values().stream()
                 .filter(condition)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void broadcast(Protocol packet) {
